--- a/src/assets/styles/utilities.css
+++ b/src/assets/styles/utilities.css
@@ -10,6 +10,13 @@
   text-align: center;
 }
 
+.flex-center-y {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  text-align: center;
+}
+
 .d-inline {
   display: inline;
 }
@@ -196,4 +203,13 @@
 
 .font-size-50 {
   font-size: 50px;
+}
+
+.text-gray {
+  color: gray;
+}
+
+.flex-break {
+  flex-basis: 100%;
+  height: 0;
 }
